RbA Build/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ARO Sales Process</fullName>
        <description>ARO Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CORO Sales Process</fullName>
        <description>CORO Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>The rollup of discounts applied to the opportunity</description>
        <inlineHelpText>The rollup of discounts applied to the opportunity</inlineHelpText>
        <label>Discount Amount</label>
        <summarizedField>Opportunity_Discount__c.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Discount__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Discount__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>The discount percent applied to the whole opportunity amount.</description>
        <inlineHelpText>The discount percent applied to the whole opportunity amount.</inlineHelpText>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enabled_Lead_Id__c</fullName>
        <description>base64 encoded Enabled+ Lead Id</description>
        <externalId>true</externalId>
        <label>Enabled+ Lead Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The account must be of type &quot;Store&quot;.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Store Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>Rollup of the product amounts.</description>
        <inlineHelpText>Rollup of the product amounts.</inlineHelpText>
        <label>Subtotal</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>The total of the opportunity (total product price - discounts)</description>
        <formula>Subtotal__c - Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total of the opportunity (total product price - discounts)</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Window_Problems__c</fullName>
        <label>Window Problems</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Closed_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>*Closed Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>ARO_Record_Type</fullName>
        <active>true</active>
        <businessProcess>ARO Sales Process</businessProcess>
        <description>ARO</description>
        <label>ARO Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CORO_Record_Type</fullName>
        <active>true</active>
        <businessProcess>CORO Sales Process</businessProcess>
        <description>CORO</description>
        <label>CORO Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>